feat: Implementado endpoint de atualização de token de usuário
